# python-axolotl

./: .gitignore  pyproject.toml
axolotl/: identitykeypair.py
axolotl/ecc/: curve.py
axolotl/state/: prekeyrecord.py  signedprekeyrecord.py
axolotl/util/: keyhelper.py  medium.py
