[project]
name = "python-axolotl"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-axolotl-curve25519 @ git+https://github.com/WeslenPy/python-axolotl-curve25519.git",
    "cryptography (>=45.0.4,<46.0.0)",
    "protobuf (>=3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
